# pichi

./: .env.example  Makefile  README.rst  pyproject.toml
pichi/: main.py
pichi/api/dependencies/: auth0.py
pichi/api/errors/: validation_error.py
pichi/api/routes/: api.py  app.py  customers.py  users.py
pichi/core/: config.py  events.py  logging.py
pichi/models/: access.py  api.py  auth0.py  enums.py  gen.py  settings.py
pichi/services/: access.py  app.py  app_access_settings.py  auth0.py  customers.py  dynamo.py  users.py
tests/: test_pichi.py
